# ie0417

./: .gitignore  README.md  Vagrantfile  run-jupyter-nb.sh
.jupyter/: migrated
.jupyter/nbconfig/: notebook.json
docs/: Makefile  requirements.txt
docs/source/: conf.py  getting-started.rst  index.rst
docs/source/labs/: labs.rst
docs/source/labs/lab1/: lab1.rst
docs/source/labs/lab2/: lab2.rst
docs/source/labs/lab3/: lab3.rst
docs/source/labs/lab4/: lab4.rst
docs/source/projects/: projects.rst
docs/source/projects/final/: final.rst
examples/c/gtest_demo/: CMakeLists.txt  README.md
examples/c/gtest_demo/include/: demo_api.h
examples/c/gtest_demo/src/: CMakeLists.txt  demo_api.c
examples/c/gtest_demo/test/: CMakeLists.txt  unittest_main.cpp
examples/c/gtest_demo/test/tests/: demo_api_fixture.cpp  demo_api_simple.cpp
examples/c/gtest_demo/test/testutil/: rand_gen.cpp
examples/c/gtest_demo/test/testutil/include/testutil/: rand_gen.hpp
examples/c/mqtt_demo/: CMakeLists.txt  README.md  mosquitto.conf
examples/c/mqtt_demo/test/: CMakeLists.txt  unittest_main.cpp
examples/c/mqtt_demo/test/tests/: mqtt_client.cpp
examples/c/mqtt_demo/test/testutil/: CMakeLists.txt
examples/c/multithreading/: CMakeLists.txt
examples/c/multithreading/src/: pthread_basic.c
examples/c/sensor_commands/: CMakeLists.txt  README.md  sensor_commands.pc.in  uml  utils.cmake
examples/c/sensor_commands/config/: sensors_cfg.json
examples/c/sensor_commands/include/sensor_commands/: command.h  command_runner.h  version.h
examples/c/sensor_commands/include/sensor_commands/sensor/: manager.h  sensor.h
examples/c/sensor_commands/src/: CMakeLists.txt  command.c  command_runner.c  version.c.in
examples/c/sensor_commands/src/sensor/: CMakeLists.txt  manager.c  sensor.c
examples/c/sensor_commands/src/sensor/analyzers/: CMakeLists.txt  avg_thresh.c  avg_thresh.h
examples/c/sensor_commands/src/sensor/sensors/: CMakeLists.txt  factory.c  factory.h  level.c  level.h  temp.c  temp.h
examples/c/sensor_commands/tools/: CMakeLists.txt
examples/c/sensor_commands/tools/sensor_cmds/: CMakeLists.txt  main.c
examples/c/zmq_demo/: CMakeLists.txt  README.md
examples/c/zmq_demo/src/: zmq_server_rep_pthread.c
examples/docker/compose_tutorial/: Dockerfile  README.md  app.py  docker-compose.yml
examples/python/decorators/: app_register.py  basic_closure.py  basic_decorator.py  higher_order.py  params.py  timer.py
examples/python/http_api/: basic_rest_client.py  basic_rest_server.py  hello_fastapi.py
examples/python/multithreading/: basic.py  events.py  locks.py
examples/python/pytest_demo/: MANIFEST.in  README.md  requirements.txt  setup.py  tox.ini
examples/python/pytest_demo/lib/demo_api/: __init__.py
examples/python/pytest_demo/test/: conftest.py  pytest.ini  requirements.txt  test_basic.py  test_fixture.py
examples/python/pytest_demo/test/utils/: rand_gen.py
examples/python/sensor_commands/: MANIFEST.in  README.md  command.py  main.py  sensor.py  setup.py
examples/python/sensor_commands/lib/sensor_commands/: __init__.py  args.py  command.py  main.py
examples/python/sensor_commands/lib/sensor_commands/sensor/: __init__.py  manager.py  sensor.py
examples/python/sensor_commands/lib/sensor_commands/sensor/analyzers/: __init__.py  avg_thresh_analyzer.py
examples/python/sensor_commands/lib/sensor_commands/sensor/sensors/: __init__.py  factory.py  level.py  temp.py
examples/python/sensor_commands/uml/: sensor_commands_class.uml  sensor_commands_seq.uml
examples/python/zmq_demo/: README.md  zmq_client_req.py
misc/planning/: cronograma_IC-2022.md
presentations/: dummy.ipynb
presentations/003_intro_arquitectura_software/: slides.ipynb
presentations/005_diseño_componentes_software/: slides.ipynb
presentations/009_desarrollo_proyectos_c_cpp/: slides.ipynb
presentations/010_debugging_en_gdb/: slides.ipynb
presentations/012_intro_containers_docker/: slides.ipynb
presentations/clase1/: clase1.ipynb
presentations/clase15/: clase15.ipynb
presentations/clase16/: clase16.ipynb
presentations/clase2/: clase2.ipynb
presentations/clase4/: clase4.ipynb
presentations/clase6/: clase6.ipynb
presentations/clase7/: clase7.ipynb
presentations/clase8/: clase8.ipynb
tools/docker/: Changelog.md  Dockerfile  Makefile
tools/docker/files/: requirements.txt
tools/docker/files/motd/: static  version
